# CS372CPS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Shape.cpp  Shape.hpp  main.cpp  tests.cpp
